Added Paging and now searching thru proper repo method.